--- a/README
+++ b/README
@@ -1,11 +1,11 @@
 #### Test cases
 ## site: https://lingualeo.com/
 
-Описание | Шаги | Данные | Ожидаемый результат | Примечание
---- | --- | --- | --- | ---
-Открытие попапа для входа | 1. зайти на сайт https://lingualeo.com/ |  | Откроется попап с формой для входа |
+| Описание | Шаги | Данные | Ожидаемый результат | Примечание |
+| --- | --- | --- | --- | --- |
+| Открытие попапа для входа | 1. зайти на сайт https://lingualeo.com/ |  | Откроется попап с формой для входа | |
 							2. нажать на кнопку "войти"
-Вход на сайт | 1. зайти на сайт https://lingualeo.com/ |  | Откроется попап с формой для входа | 
+| Вход на сайт | 1. зайти на сайт https://lingualeo.com/ |  | Откроется попап с формой для входа |  |
 				2. нажать на кнопку "войти"
 				3. ввести email
 				4. ввести пароль
